final fixes and "targetplatform": 4.[2345]

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"client": "administrator",
 		"tag": "stable",
 		"targetplatform": [
-			"4.*"
+			"4.[2345]"
 		],
 		"namespace": "Joomla\\Module\\AdministratorLinkGhsvs"
 	},
@@ -30,12 +30,13 @@
 			"PHP 8.0",
 			"PHP 8.1",
 			"PHP 7.4",
-			"Joomla 4.1"
+			"Joomla 4.2",
+			"Joomla 4.3-dev"
 		]
 	},
 	"minimumPhp": "7.2.0",
 	"maximumPhp": "8.99999.99999",
-	"minimumJoomla": "4.0.0",
+	"minimumJoomla": "4.2.0",
 	"maximumJoomla": "4.9999.9999",
 	"allowDowngrades": "1",
 	"creationDate": "2013-09-19",
